--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-
 /* Importamos una fuente de Google Fonts */
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap");
 
@@ -105,6 +104,18 @@ section h2 {
 #projects a:hover {
   background-color: #f8cdda;
   color: #1d2b64;
+}
+.project {
+  margin-bottom: 30px; /* Ajusta el valor según prefieras el espacio */
+}
+
+.project-links a {
+  margin-right: 10px; /* Espacio horizontal entre los botones */
+  margin-bottom: 10px; /* Espacio vertical si hay varios botones */
+}
+
+.projects-container {
+  margin-bottom: 50px; /* Ajusta el valor según prefieras el espacio */
 }
 
 /* Estilo del formulario de contacto */
